import "Value.proto";
import "KeyValuePackageResponse.proto";


option java_outer_classname="GetTagResponseProtocol";
package com.alachisoft.tayzgrid.common.protobuf;
message GetTagResponse {
	optional KeyValuePackageResponse keyValuePackage = 1;
}